fix: aligned buttons and icons, fixed styles

--- a/src/components/admin_tools/variables/CommonVariables.module.css
+++ b/src/components/admin_tools/variables/CommonVariables.module.css
@@ -16,16 +16,8 @@
     composes: variables-container;
 }
 
-.common-variables-header {
-    composes: variables-header;
-}
-
 .common-variables-title {
     composes: variables-title;
-}
-
-.common-variables-actions {
-    composes: variables-actions;
 }
 
 .common-variables-icon {
